fixed horizontal scroll on index.html

--- a/styles/sass/partials/_base.scss
+++ b/styles/sass/partials/_base.scss
@@ -1,5 +1,7 @@
 body {
   background: $navy;
+  overflow-x: hidden;
+  width: 100vw;
 }
 
 img {
